Making Dapper Hardened Browser use CSD

--- a/com.dapperlinux.Dapper-Hardened-Browser/mozilla.cfg
+++ b/com.dapperlinux.Dapper-Hardened-Browser/mozilla.cfg
@@ -52,6 +52,9 @@ pref("browser.pocket.enabled", false);
 // Disable search engine update
 pref("browser.search.update", false);
 
+// Tabs in title bar
+pref("browser.tabs.drawInTitlebar", true);
+
 // Disable pocket button
 pref("browser.toolbarbuttons.introduced.pocket-button", false);
 
